    #682222)

  [ Thorsten Glaser ]
  * Merge fusionforge (5.2~rc1wheezy1~exp1) experimental upload
  * Move wikis to new (as of 2010-03-19, possibly by accident) data path
  * Check image upload is enabled before trying to do so (Closes: #679521)
  * Unbreak and silence the MediaWiki nightly dump cronjob (Closes: #680165)
  * SECURITY: Upon user deletion, remove their Unix account as well

 -- Thorsten Glaser <tg@mirbsd.de>  Mon, 03 Sep 2012 11:55:51 +0200

fusionforge (5.2~rc1wheezy1~exp1) experimental; urgency=low

  * Since this package was accidentally uploaded as native package,
    and there is a large delta to what’s in upstream SVN right now,
    upload this deliberately as native package now.
  * Add myself to uploaders
  * Opt out of Apport reports
  * Integrate with MediaWiki 1.19 (Closes: #679932)

 -- Thorsten Glaser <tg@mirbsd.de>  Tue, 07 Aug 2012 13:34:37 +0200

fusionforge (5.2~rc1-5) unstable; urgency=low

  * Updated Debconf translations for Portuguese (thanks to Américo
    Monteiro), German (thanks to Helge Kreutzmann), Russian (thanks to
    Yuri Kozlov), Galician (thanks to Jorge Barreiro), Czech (thanks to
    Miroslav Kure) (closes: #677737, #677653, #678424, #678629, #678685).

 -- Roland Mas <lolando@debian.org>  Thu, 28 Jun 2012 20:16:27 +0200

fusionforge (5.2~rc1-4) unstable; urgency=low

  * One more fix to Mediawiki upgrades (closes: #677599).

 -- Roland Mas <lolando@debian.org>  Fri, 15 Jun 2012 14:48:58 +0200

fusionforge (5.2~rc1-3) unstable; urgency=low

  * Updated Debconf translations for Swedish (thanks to Martin Bagge)
    (closes: #677411).
  * Fixes to Mediawiki plugin (including for interwiki).

 -- Roland Mas <lolando@debian.org>  Thu, 14 Jun 2012 16:48:38 +0200

fusionforge (5.2~rc1-2) unstable; urgency=low

  * Use more of the system-provided Jquery.
  * Reinstate code running the Mediawiki SQL initialisation code from the
    package's postinst (closes: #677373).
