@@ -17,8 +17,9 @@ fusionforge (5.2~rc2~svn16089+) UNRELEASED; urgency=low
   * Check image upload is enabled before trying to do so (Closes: #679521)
   * Unbreak and silence the MediaWiki nightly dump cronjob (Closes: #680165)
   * SECURITY: Upon user deletion, remove their Unix account as well
+  * SECURITY: Do not disclose inaccessible groups on user_home/toplist
 
- -- Thorsten Glaser <tg@mirbsd.de>  Mon, 03 Sep 2012 11:55:51 +0200
+ -- Thorsten Glaser <tg@mirbsd.de>  Mon, 03 Sep 2012 14:07:16 +0200
 
 fusionforge (5.2~rc1wheezy1~exp1) experimental; urgency=low
 
